# gopro-yank

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: demo.tape
src/gopro_yank/: __init__.py  __main__.py  adaptive.py  api.py  cli.py  demo.py  download.py  env.py  progress.py  state.py
tests/: test_adaptive.py  test_cli_login.py  test_download.py  test_state.py
